# EXP-Track

./: .env.example  .gitignore  BUILD_NOTARIZE.md  LICENSE  README.md  detect_numbers_rapidocr_autoscale.py  index.html  package-lock.json  package.json  run_e2e_legacy.py  vitest.config.ts
.serena/: project.yml
docs/: README.md
docs/backend/: models.md  services.md  tauri_commands.md
docs/frontend/: components.md  hooks.md  lib.md  stores.md
docs/python/: ocr_server.md
python_ocr_server/: dict_numbers.txt  generate_spec.py  main.py  ocr_potion_check.py  ocr_server.spec  ocr_server.spec.bak  requirements.txt
scripts/: README.md  build_python_server.bat  build_python_server.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.notarize.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  exp.rs  mod.rs  ocr.rs  screen_capture.rs  session.rs  tracking.rs
src-tauri/src/models/: config.rs  exp_data.rs  mod.rs  ocr_result.rs  roi.rs
src-tauri/src/services/: config.rs  exp_calculator.rs  hp_potion_calculator.rs  mod.rs  mp_potion_calculator.rs  ocr_tracker.rs  python_server.rs  screen_capture.rs
src-tauri/src/services/ocr/: engine.rs  http_ocr.rs  inventory_template_matcher.rs  mod.rs  parser.rs  preprocessing.rs  template_matcher.rs  tesseract.rs
src-tauri/src/utils/: mod.rs
src/components/: CompactRoiManager.css  CompactRoiManager.tsx  ExpTrackerDisplay.css  ExpTrackerDisplay.tsx  HistoryDashboard.css  HistoryDashboard.tsx  PotionSettings.tsx  RoiConfigModal.css  RoiConfigModal.tsx  RoiDemo.tsx  RoiManager.css  RoiManager.tsx  RoiSelector.css  RoiSelector.tsx  SessionArchive.css  SessionArchive.tsx  Settings.css  Settings.tsx  TimerSettingsModal.css  TimerSettingsModal.tsx  TitleBar.css  TitleBar.tsx
src/hooks/: useExpTracker.ts  useParallelOcrTracker.ts
src/lib/: configCommands.ts  expCommands.ts  ocrCommands.ts  roiCommands.ts  tauri.ts  trackingCommands.ts
src/pages/: History.tsx
src/services/: ocrService.ts
src/stores/: mesoStore.ts  ocrStore.ts  roiStore.ts  sessionStore.ts  settingsStore.ts  timerSettingsStore.ts  trackingStore.ts
(+1 files in other folders)
