[package]
name = "exp-tracker"
version = "0.1.0"
description = "Mapleland EXP Tracker - Real-time experience and meso tracking"
authors = ["EXP-Track Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "exp_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
dirs = "5.0"
chrono = "0.4"
base64 = "0.22"
# Screen capture (latest stable)
xcap = "0.7"
# Image processing
image = "0.25"
imageproc = "0.25"

[dev-dependencies]
tokio-test = "0.4"

