[package]
name = "exp-tracker"
version = "0.1.0"
description = "Mapleland EXP Tracker - Real-time experience and meso tracking"
authors = ["EXP-Track Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "exp_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.1"
tauri-plugin-global-shortcut = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
dirs = "5.0"
chrono = "0.4"
base64 = "0.22"
# Screen capture (latest stable)
xcap = "0.7"
# Image processing
image = "0.25"
regex = "1.10"
# Async synchronization
parking_lot = "0.12"
# HTTP client for Python OCR server
reqwest = { version = "0.12", features = ["json"] }
# Parallel processing
rayon = "1.10"

[dev-dependencies]
tokio-test = "0.4"

# Development profile with optimizations for ONNX inference performance
# This makes `tauri dev` run at release-level speed for OCR operations
[profile.dev]
opt-level = 3

